test/semantic_error/se_array.c0
int arr[0];
int f(){}
